<resources>
   <string name="app_name">Medicine Reminder</string>
   <string name="delete">DELETE</string>
   <string name="add">ADD</string>
   <string name="add_photo">Add photo</string>
   <string name="no_reminders">You did\'t set any reminder</string>
   <string name="add_success">Reminder added</string>
   <string name="deleted">Reminder deleted</string>
   <string name="camera_error">Sorry! Your device doesn\'t support camera</string>
   <string name="empty">Please check empty fields</string>
   <string name="times">%s Times</string>
   <string name="medicine_image">Medicine Image</string>
   <string name="splash_txt">Medicine Reminder</string>
   <string name="my_location">My location</string>
   <string name="save">Save</string>
   <string name="select_pharmacy">Select Pharmacy</string>
   <string name="show_map">Show Pharmacy map</string>
   <string name="pharmacy_location">Pharmacy Location</string>
   <string name="share">Share</string>

   <!-- notification -->
   <string name="notification_title">Medicine Time</string>
   <string name="notification_content">It's time for your medicine</string>
   <!-- hints -->
   <string name="name">Medicine name</string>
   <string name="ex_date">Expiry date</string>
   <string name="time">Number of times</string>
    <string name="title_activity_maps">Map</string>

</resources>
