<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/name"
        android:id="@+id/title"
        android:padding="10dp"
        android:contentDescription="@string/name"
        android:textSize="20sp"
        android:textColorHint="@android:color/white"
        android:gravity="left"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_shape"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/ex_date"
        android:padding="10dp"
        android:textSize="20sp"
        android:contentDescription="@string/ex_date"
        android:textColorHint="@android:color/white"
        android:gravity="left"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_shape"
        android:id="@+id/exDate"
        android:layout_below="@+id/title"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/title"
        android:layout_alignEnd="@+id/title"
        android:layout_alignLeft="@+id/title"
        android:layout_alignStart="@+id/title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:hint="@string/time"
        android:textColorHint="@android:color/white"
        android:gravity="left"
        android:inputType="number"
        android:contentDescription="@string/time"
        android:maxLength="1"
        android:id="@+id/noTimes"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_shape"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/exDate"
        android:layout_marginTop="20dp"
        android:layout_alignLeft="@+id/exDate"
        android:layout_alignStart="@+id/exDate"
        android:layout_alignRight="@+id/exDate"
        android:layout_alignEnd="@+id/exDate" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/noTimes"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/medicine_image"
        android:layout_alignRight="@+id/noTimes"
        android:layout_alignEnd="@+id/noTimes"
        android:layout_alignLeft="@+id/noTimes"
        android:layout_alignStart="@+id/noTimes"
        android:layout_above="@+id/delete"
        android:visibility="invisible"
        android:layout_marginBottom="10dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add"
        android:id="@+id/add"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal|bottom|end"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:textColor="#1D8B78"
        android:background="@drawable/add_button"
        android:textStyle="bold"
        android:contentDescription="@string/add"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_photo"
        android:contentDescription="@string/add_photo"
        android:id="@+id/add_photo"
        android:textSize="18sp"
        android:textColor="@android:color/white"
        android:background="@drawable/rounded_shape"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignLeft="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_alignRight="@+id/imageView"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginTop="15dp" />
</RelativeLayout>